--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "config": "^3.1.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
