Began to implement backend within application

--- a/package.json
+++ b/package.json
@@ -5,9 +5,18 @@
   "dependencies": {
     "antd": "^3.19.3",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "config": "^3.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.0.1",
+    "generate-password": "^1.4.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "mongoose": "^5.6.1",
+    "nodemailer": "^6.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
